--- a/exercise1.html
+++ b/exercise1.html
@@ -12,7 +12,7 @@
             <p><img src="Images/HAMK.jpg" alt="picture of dave" width="300px" height="60px"></p>
 
 
-            <!--Link don't go anywhere because on the real page they were dropdown menus, and I don't know how to do them-->
+            <!-- ss Link don't go anywhere because on the real page they were dropdown menus, and I don't know how to do them-->
             <a href="link1.html" target="_blank" >Hakijalle</a>
             <a href="link2.html" target="_blank" >Opiskelijalle</a>
             <a href="link3.html/" target="_blank" >Yrityksille</a>
