--- a/exercise1.html
+++ b/exercise1.html
@@ -34,7 +34,7 @@
             <p><a href="http://hamk.fi/hae-hamkiin/avoin-amk/" target="_blank" >Ilmottaudu avoimeen AMKiin <b>14.-25.2.2022</b></a></p>
 
             
-
+            <!--SAISINKO TÄMÄN TOIMIMAAN-->
         
 
         </body>
