--- a/Index.html
+++ b/Index.html
@@ -1,6 +1,12 @@
 <html>
+    <!DOCTYPE html>
+    <html lang="en">
     <head>
         <title>These are my individual tasks</title>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Document</title>
     </head>
     <body>
         <h1>Jesse Rajala</h1>
@@ -15,4 +21,5 @@
             
         </ul>
     </body>
+
 </html>
