ex2 compelete minus image

--- a/exercise2.html
+++ b/exercise2.html
@@ -9,6 +9,28 @@
     <title>Jesse Rajala - Exercise 2</title>
 </head>
 <body>
-    
+    <header>Links</header>
+    <ul>
+        <li><a href="index.html" >Home</a></li>
+        <li><a href="aboutus.html" target="_blank" >About us</a></li>
+        <li><a href="projects.html" target="_blank">Projects</a></li>
+
+    </ul>
+    <article class="squid">
+        <h1>Squid</h1>
+        <p>Squid are cephalopods in the superorder Decapodiformes with elongated bodies, large eyes, eight arms and two tentacles. 
+        </p>
+        <img src="Images/squid.jpg" alt="Picture of Squid" class="floarRight">
+        <h2>Evolution</h2>
+        <p>
+            Crown coleoids (the ancestors of octopuses and squid) diverged at the end of the Paleozoic, in the Permian. 
+        </p>
+
+    </article>
+    <address>
+        Hämeen ammattikorkeakoulu <br>
+        HAMK PL 230 13101 Hämeenlinna
+    </address>
+        
 </body>
 </html>
