--- a/exercise1.html
+++ b/exercise1.html
@@ -1,7 +1,7 @@
 </html lang ="fi">
 <html>
     <head>
-         <title>Exercise1</title>
+         <title>Jesse Rajala - Exercise 1</title>
          <meta charset="utf-8">
          <meta name="author" content="Jesse Rajala">
          <meta name="description" content="Hämeen ammattikorkeakoulu HAMK kouluttaa nuoria ja aikuisia sekä tekee soveltavaa tutkimusta ja kehitystyötä">
@@ -9,7 +9,7 @@
          </head>
         <body>
 
-            <p><img src="Images/HAMK.jpg" alt="picture of dave" width="300px" height="60px"></p>
+            <p><img src="Images/HAMK.jpg" alt="hamk logo from made in paint" width="300px" height="60px"></p>
 
 
             <!--Link don't go anywhere because on the real page they were dropdown menus, and I don't know how to do them-->
