exercise3 and index.html link added

--- a/exercise3.html
+++ b/exercise3.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Jesse Rajala">
-    <meta name="description" content="This is my 2nd exercise for this course">
-    <title>Jesse Rajala - Exercise 2</title>
+    <meta name="description" content="This is my 3rd exercise for this course">
+    <title>Jesse Rajala - Exercise 3</title>
     <link href="css/style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
@@ -22,7 +22,7 @@
         <img src="Images/squid.jpg" 
         alt="Picture of Squid" 
         style="float: right;">
-
+        
         <p>Squid are cephalopods in the superorder Decapodiformes with elongated bodies, large eyes, eight arms and two tentacles. 
         </p>
         <h2>Evolution</h2>
