--- a/exercise2.html
+++ b/exercise2.html
@@ -12,7 +12,7 @@
 <body>
     <header>Links</header>
     <ul>
-        <li><a href="index.html" >Home</a></li>
+        <li><a href="Index.html" >Home</a></li>
         <li><a href="aboutus.html" target="_blank" >About us</a></li>
         <li><a href="projects.html" target="_blank">Projects</a></li>
 
